test_programs/valid/function_with_arguments.c
int test(int integer, char *string, char character, float floating_point)
{
    return integer;
}


int main()
{
    return test(10, "test", 'a', 3.14);
}
