test_programs/invalid/pointer_to_int_minus_pointer_to_float.c
int main()
{
    int a = 10;
    float b = 3.14;
    int *pa = &a;
    float *pb = &b;

    pb - pa;
}
